--- a/styles/style.css
+++ b/styles/style.css
@@ -1,55 +1,107 @@
-
-/* fonts */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
 body{
     font-family: 'Poppins', sans-serif;
-    color: #FFFFFF;
     margin: 0%;
 }
-h2{
-    font-size: 64px;
+p{
+    font-size: 70px;
+    font-weight: bolder;
+    color: #FFFFFF;
 }
-
-.container{
+.flexible-container{
     display: flex;
-    height: 677px;
+    margin-bottom: 100px;
     background-color: #2D25A0;
-    margin-bottom: 100%;
-
-    
-    
-    
 }
-.top-icons{
-    width: 50%;
-    padding: 5%;
+.top-side{
+     width: 50%;
+     padding-left: 10%;
+     padding-top: 140px;
+     margin-bottom: 27px;
 }
-.top-icons img{
-    width: 556.01px;
-    height: 438px;
-    padding: 30px 50px;
-    
-
-}
-.section-title{
-    width: 485px;
-    height: 230px;
-    
-
+.pack img{
+    width: 622px;
+    height: 489px;
+    margin-top: 114px;
+    margin-bottom: 74px;
+    margin-right: 148px;
 }
 .live-button{
     text-decoration: none;
-    padding: 10px 30px;
     background-color: #E02C6D;
-    color: #FFFFFF;
+    padding: 10px 30px;
+    color: white;
     font-weight: 500;
-    font-size: 16px;
-
-
 }
 .fa-arrow-right{
-    padding: 30px 24px;
+    padding-left: 10px;
 }
-
-
-/* players info*/
+.all-player{
+    font-size: 60px ;
+    color:gray;
+    font-weight: 500;
+    padding-left: 10%;
+}
+.flexible{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-row-gap: 20px;
+    margin-bottom: 50px;
+    margin-left: 0%;
+    margin-right: 0%;
+}
+.half-width{
+    width: 50%;
+    padding: 5%;
+    
+}
+.half-width img{
+    width: 100%;
+}
+.individual{
+    margin-right: 2%;
+    margin-left: 2%;
+    box-shadow: 5px 5px 15px gray;
+    padding: 20px 20px;
+    
+}
+.design{
+    font-size: 30px ;
+    color:black;
+    font-weight: bold;
+   font-style: normal;
+}
+.design-1{
+    color: black;
+    font-size: 15px;
+}
+.videos{
+    display: flex;
+    margin: 10%;
+    grid-template-columns: repeat(2, 1fr);
+}
+/* Footer */
+.image-edit{
+    display: flex;
+    padding-top: 50px;
+    justify-content: center;
+}
+.image-edit img{
+    width: 483px;
+    height: 110px;
+    
+}
+.icon{
+    display: flex;
+    justify-content: center;
+}
+.filled{
+    padding-left: 30px;
+    margin-right: 20px;
+} 
+#color{
+    color: black;
+    font-size: 17px;
+    text-align: center;
+}
+/* Media Queris */
+/* Mobile Devices */
